--- a/businessform.html
+++ b/businessform.html
@@ -12,7 +12,7 @@
             background-color: #f4f4f4;
             margin: 0;
             padding: 0;
-            background-image: url(/images/b.png);
+            background-image: url(/images/b1.png);
         }
 
         .container {
